--- a/admin/chats.html
+++ b/admin/chats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App</title>
+    <title>Admin Chat App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -264,6 +264,7 @@
             <a href="drivers.html">Drivers</a>
             <a href="#">Chats</a>
             <a href="students.html">Students</a>
+            <a href="attendance.html">Attendance</a>
             <a href="#" onclick="logout()">Logout</a>
         </nav>
     </header>
@@ -384,6 +385,7 @@
             </div>
         </div>
     </div>
+    <script src="./scripts/connection.js"></script>
     <script src="./scripts/chat.js"></script>
 </body>
 </html>
