--- a/admin/index.html
+++ b/admin/index.html
@@ -226,6 +226,7 @@
             <a href="drivers.html">Drivers</a>
             <a href="chats.html">Chats</a>
             <a href="students.html">Students</a>
+            <a href="attendance.html">Attendance</a>
             <a href="#" onclick="logout()">Logout</a>
         </nav>
     </header>
