--- a/admin/drivers.html
+++ b/admin/drivers.html
@@ -273,6 +273,25 @@
             background-color: #dc3545;
             color: #fff;
         }
+        .removeDriver{
+            cursor: pointer;
+        }
+        .unassign-route-btn {
+            background-color: #dc3545;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            margin-left: 10px;
+            border-radius: 5px;
+            font-size: 12px;
+            cursor: pointer;
+            transition: background-color 0.2s ease-in-out;
+        }
+
+        .unassign-route-btn:hover {
+            background-color: #c82333;
+        }
+
     </style>
     <link rel="stylesheet" href="./css/chat.css">
     <link rel="stylesheet" href="./css/search.css">
@@ -291,6 +310,7 @@
             <a href="#">Drivers</a>
             <a href="chats.html">Chats</a>
             <a href="students.html">Students</a>
+            <a href="attendance.html">Attendance</a>
             <a href="#" onclick="logout()">Logout</a>
         </nav>
     </header>
@@ -348,16 +368,26 @@
             let input = document.getElementById('searchInput').value.toLowerCase();
             let table = document.getElementById('driversTable');
             let rows = table.getElementsByTagName('tr');
-            
+
             for (let i = 1; i < rows.length; i++) {
-                let firstName = rows[i].getElementsByTagName('td')[1];
-                let lastName = rows[i].getElementsByTagName('td')[2];
-                if (firstName && lastName) {
-                    let textValue = firstName.textContent.toLowerCase() + ' ' + lastName.textContent.toLowerCase();
-                    rows[i].style.display = textValue.includes(input) ? '' : 'none';
+                const cells = rows[i].getElementsByTagName('td');
+                const firstName = cells[1]?.textContent.toLowerCase();
+                const lastName = cells[2]?.textContent.toLowerCase();
+                const username = cells[3]?.textContent.toLowerCase();
+
+                const busRouteCell = cells[4];
+                let busRoute = '';
+
+                if (!busRouteCell.querySelector('button')) {
+                    busRoute = busRouteCell.textContent.toLowerCase();
                 }
+
+                const combinedText = `${firstName} ${lastName} ${username} ${busRoute}`;
+                rows[i].style.display = combinedText.includes(input) ? '' : 'none';
             }
         }
+
+
 
         function sortTable(colIndex) {
             let table = document.getElementById("driversTable");
